<resources>
    <string name="app_name">MyZoo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="favories">My Favorits</string>
    <string name="theme">Themes</string>
    <string name="animals">All Animals</string>
    <string name="contact">Contact Us</string>
    <string name="map">Map</string>
    <string name="info">Practical Information</string>

    <!-- Home -->
    <string name="visie">Visit</string>
    <string name="text_welcom">
        Welcom in the best zoo in France ....
    </string>

    <!-- All Animals-->
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="resul">results</string>

    <!-- Contact -->
    <string name="send">Send</string>
    <string name="name">Your name and firstname</string>
    <string name="email">Your email</string>
    <string name="object">Object of your message</string>
    <string name="message">Your message</string>

    <!-- Info -->
    <string name="adress">Adress :</string>
    <string name="horraire">Hourly</string>
    <string name="tarif">Rate :</string>
    <string name="info_adress">
        43 rue raspail, 92044 Levallois Perret
    </string>

    <string name="info_tarif_adult">adult : 23 $</string>
    <string name="info_tarif_student">studient : 15 $</string>
    <string name="info_tarif_child">child ( -13) : 10 $</string>
    <string name="info_horraire"> 9h - 18h</string>

    <string name="retour">Return</string>
    <string name="see_map">See MAP</string>
    <string name="add_favoris">Add Favoris</string>
    <string name="title_activity_map">MapActivity</string>

</resources>
