<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/theme"
            android:icon="@drawable/ic_theme"
            android:title="@string/theme"/>
        <item
            android:id="@+id/animals"
            android:icon="@drawable/ic_animal"
            android:title="@string/animals"/>
        <item
            android:id="@+id/favories"
            android:icon="@drawable/ic_favory"
            android:title="@string/favories"/>
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/map"/>
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact"/>
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_info"
            android:title="@string/info"/>
    </group>

</menu>
