<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.pauliner.myzoo.ContactFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/title_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:enabled="false"
            android:text="@string/contact"
            android:textColor="?attr/colorPrimary"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/object"
            />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/send_message"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="45dp"
            android:background="?attr/colorPrimary"
            android:text="@string/send"
            android:textColor="#ffffff"/>

    </LinearLayout>

</FrameLayout>
