<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.pauliner.myzoo.InfosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/title_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:enabled="false"
            android:text="@string/info"
            android:textColor="?attr/colorPrimary"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/horraire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horraire"
                    android:textColor="?attr/colorAccent"/>

                <TextView
                    android:id="@+id/info_horraire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_horraire"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/tarif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarif"
                    android:textColor="?attr/colorAccent"/>

                <TextView
                    android:id="@+id/tarif_adult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_tarif_adult"/>

                <TextView
                    android:id="@+id/tarif_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_tarif_student"/>

                <TextView
                    android:id="@+id/tarif_child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_tarif_child"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/adress"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/adress"
            android:textColor="?attr/colorAccent"/>

        <TextView
            android:id="@+id/info_adress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/info_adress"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/map"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/map"/>

    </LinearLayout>

</FrameLayout>
